--- a/app/i18n/hu-HU/widgets.json
+++ b/app/i18n/hu-HU/widgets.json
@@ -7,19 +7,19 @@
   "Your channel's chat in your stream": "Csatornád chatje, mely a streamedben jelenik meg",
   "Show off most recent donations to viewers": "Mutasd meg a nézőidnek a legutóbbi támogatásokat",
   "Give your viewers a donation target to help you reach": "Adj meg egy támogatási célt, hogy nézőid segíthessenek annak elérésében",
-  "Give your viewers a follower target to help you reach": "Give your viewers a follower target to help you reach",
-  "Give your viewers a bit target to help you reach": "Give your viewers a bit target to help you reach",
-  "Give your viewers a subscriber target to help you reach": "Give your viewers a subscriber target to help you reach",
-  "Show off how many viewers you have from multiple platforms": "Show off how many viewers you have from multiple platforms",
-  "Give your viewers an opportunity of becoming a boss": "Give your viewers an opportunity of becoming a boss",
-  "Rolling credits at the end of your stream": "Rolling credits at the end of your stream",
-  "Add %{widgetscount} Widgets": "Add %{widgetscount} Widgets",
+  "Give your viewers a follower target to help you reach": "Adj meg egy követő célt, hogy nézőid segíthessenek annak elérésében",
+  "Give your viewers a bit target to help you reach": "Adj meg egy bit célt, hogy nézőid segíthessenek annak elérésében",
+  "Give your viewers a subscriber target to help you reach": "Adj meg egy feliratkozó célt, hogy nézőid segíthessenek annak elérésében",
+  "Show off how many viewers you have from multiple platforms": "Több platformról érkező nézők számának megjelenítése",
+  "Give your viewers an opportunity of becoming a boss": "Adj lehetőséget nézőidnek, hogy ők lehessenek a főellenségek",
+  "Rolling credits at the end of your stream": "A streamed végén futó stáblista",
+  "Add %{widgetscount} Widgets": "%{widgetscount} widget hozzáadása",
   "Rather do this manually?": "Manuálisan szeretnéd csinálni?",
   "Setup later": "Beállítás később",
-  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "Widget Theme installed & activated. Click here to manage your Widget Profiles.",
-  "Follow": "Follow",
-  "Subscription": "Subscription",
-  "Donation": "Donation",
+  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "A Widget Témákat installáltuk & aktiváltuk. A Modul Profilok beállításaihoz kattints ide.",
+  "Follow": "Követés",
+  "Subscription": "Feliratkozás",
+  "Donation": "Támogatás",
   "Bits": "Bitek",
-  "Host": "Host"
+  "Host": "Hosztolás"
 }
