--- a/app/i18n/tr-TR/notifications.json
+++ b/app/i18n/tr-TR/notifications.json
@@ -5,7 +5,7 @@
   "Skipped frames detected:": "Atlanan kare saptandı:",
   "Detect skipped frames": "Atlanan kareyi sapta",
   "Skipped frames threshold": "Atlanan Kare Eşiği",
-  "Detect lagged frames": "Geç gelen kare saptandı",
+  "Detect lagged frames": "Geç gelen kareleri sapta",
   "Lagged frames threshold": "Geç gelen kare eşiği",
   "Detect dropped frames": "Ulaşmayan kareyi sapta",
   "Dropped frames threshold": "Ulaşmayan kare eşiği",
