--- a/app/i18n/tr-TR/overlays.json
+++ b/app/i18n/tr-TR/overlays.json
@@ -4,5 +4,5 @@
   "This is an experimental feature.  Use at your own risk.": "Deney aşamasında bir içerik. Sizin sorumluluğunuz altında.",
   "Export Overlay File": "Arayüz Dosyasını Dışa Aktar",
   "Import Overlay File": "Arayüz Dosyasını İçe Aktar",
-  "Import Widget File in Current Scene": "Güncel Sahneye Eklentiyi Aktar"
+  "Import Widget File in Current Scene": "Güncel Sahneye Eklenti Dosyası Aktar"
 }
