--- a/app/i18n/tr-TR/sources.json
+++ b/app/i18n/tr-TR/sources.json
@@ -64,7 +64,7 @@
   "New Followers": "Yeni Takipçiler",
   "New Subscribers": "Yeni Aboneler",
   "Cheers": "Cheers",
-  "Spin Wheel": "Çarkı Döndür",
+  "Spin Wheel": "Dönen Çark",
   "Spin the wheel to make a decision.": "Bir karar vermek için çarkı çevirin.",
   "The streamer manually triggers a spin anytime while they are live.": "Yayıncı, yayında iken, istediği zaman çarkı çevirmeyi tetikler.",
   "Allows you to add existing scene as a source": "Kaynak bölgesine oluşturduğunuz sahneyi eklemenizi sağlar",
@@ -82,7 +82,7 @@
   "Standard": "Standart",
   "Widgets": "Eklentiler",
   "Alertbox": "Uyarı Kutusu",
-  "Essential": "Başlıca",
+  "Essential": "Önemli",
   "Event List": "Olay Listesi",
   "Donation Ticker": "Bağış Listesi Bandı",
   "The source name is required": "Kaynak ismi gerekli",
@@ -97,7 +97,7 @@
   "Widget Type": "Eklenti çeşidi",
   "Configure": "Yapılandır",
   "Go To Widget Settings": "Eklenti Seçeneklerine Git",
-  "Test Widgets": "Test Eklentileri",
+  "Test Widgets": "Eklentileri Dene",
   "Hide Test Widgets": "Test Eklentilerini Gizle",
   "Add Folder": "Klasör Ekle",
   "Remove Sources": "Kaynakları Sil",
