--- a/app/i18n/tr-TR/streamlabels.json
+++ b/app/i18n/tr-TR/streamlabels.json
@@ -13,7 +13,7 @@
   "Show Latest": "En sonuncuyu göster",
   "Always, show last person when inactive": "Her zaman, eğer inaktif ise son kişiyi göster",
   "Include Resubs": "Yeniden Abone Olanları İçersin",
-  "Preview": "Önizle",
+  "Preview": "Ön İzleme",
   "Note:": "Not:",
   "Actual label text may take up to 60 seconds to update": "Etiket yazısı 60 saniyede bir yenilenir"
 }
