--- a/app/i18n/zh-TW/settings.json
+++ b/app/i18n/zh-TW/settings.json
@@ -15,7 +15,7 @@
   "Show Cache Directory": "顯示快取資料夾",
   "Delete Cache and Restart": "刪取所有快取並重新啟動",
   "Upload Cache to Developers": "上傳快取資料給開發人員",
-  "Restart Streamlabels Session": "重啟Streamlabels中",
+  "Restart Streamlabels Session": "重啟Streamlabels",
   "Run Auto Optimizer": "運行自動最佳化",
   "Confirm stream title and game before going live": "請在直播前，確認實況標題及遊戲項目",
   "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "警告！你將「永久」失去所有場景、來源以及設定！",
