--- a/app/i18n/zh-TW/sources.json
+++ b/app/i18n/zh-TW/sources.json
@@ -139,6 +139,6 @@
   "Center Horizontal": "水平對齊",
   "Center Vertical": "垂直對齊",
   "Unhide All": "全部取消隱藏",
-  "Cloud Backup: All media and sources are backed up in the cloud": "雲端備份：所有媒體與場景來源均以備份置雲端",
+  "Cloud Backup: All media and sources are backed up in the cloud": "雲端備份：所有媒體與場景來源均已備份至雲端",
   "Cloud Backup: Your media and sources are being synced with the cloud": "雲端備份：所有媒體與場景來源正在與雲端資料同步"
 }
