--- a/app/i18n/ko-KR/remote-control.json
+++ b/app/i18n/ko-KR/remote-control.json
@@ -1,12 +1,12 @@
 {
-  "Show details": "상세한 정부 보기",
-  "Hide details": "상세한 정부 숨기기",
+  "Show details": "상세 정보 보기",
+  "Hide details": "상세 정보 숨기기",
   "API token": "API 토큰",
-  "Generate new": "새롭게 생성",
+  "Generate new": "새로 생성",
   "Port": "포트",
   "IP addresses": "IP 주소",
-  "You can now control Streamlabs OBS from your phone.": "이제 Streamlabs OBS을 귀하의 휴대폰으로 조종할 수 있읍니다.",
-  "To begin, Scan this QR code with your phone.": "시작 하려면 휴대폰으로 이 QR 코드를 스캔 하세요.",
-  "This feature will only work with the most recent version of the Streamlabs mobile app.": "이 기능은 제일 최선 Streamlabs 모바일 버전만 사용됍니다.",
-  "Click to show": "클릭하여 표시"
+  "You can now control Streamlabs OBS from your phone.": "이제 모바일로 Streamlabs OBS를 제어할 수 있습니다.",
+  "To begin, Scan this QR code with your phone.": "시작하시려면, 모바일로 이 QR 코드를 인식시켜주세요.",
+  "This feature will only work with the most recent version of the Streamlabs mobile app.": "이 기능은 최신 Streamlabs 모바일 앱에서만 사용할 수 있습니다.",
+  "Click to show": "클릭해서 보기"
 }
