--- a/app/i18n/ko-KR/streamlabels.json
+++ b/app/i18n/ko-KR/streamlabels.json
@@ -1,6 +1,6 @@
 {
-  "Label Type": "Label Type",
-  "Label Template": "Label Template",
+  "Label Type": "라벨 종류",
+  "Label Template": "라벨 템플릿",
   "Item Template": "Item Template",
   "Item Separator": "Item Separator",
   "Item Limit": "Item Limit",
@@ -15,5 +15,5 @@
   "Include Resubs": "Include Resubs",
   "Preview": "Preview",
   "Note:": "Note:",
-  "Actual label text may take up to 60 seconds to update": "Actual label text may take up to 60 seconds to update"
+  "Actual label text may take up to 60 seconds to update": "라벨 텍스트가 적용될 때까지 60초 이상이 걸릴 수 있음"
 }
