--- a/app/i18n/ko-KR/widgets.json
+++ b/app/i18n/ko-KR/widgets.json
@@ -14,12 +14,12 @@
   "Give your viewers an opportunity of becoming a boss": "Give your viewers an opportunity of becoming a boss",
   "Rolling credits at the end of your stream": "Rolling credits at the end of your stream",
   "Add %{widgetscount} Widgets": "Add %{widgetscount} Widgets",
-  "Rather do this manually?": "수동으로 하실레요?",
-  "Setup later": "나중에 설치",
+  "Rather do this manually?": "수동으로 하시겠습니까?",
+  "Setup later": "나중에 로그인하기",
   "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "위젯 테마 설치하고 활성화. 위제 프로필은 관리하려면 여기를 클릭하세요.",
   "Follow": "팔로우",
   "Subscription": "구독",
   "Donation": "후원",
-  "Bits": "Bits",
+  "Bits": "비트",
   "Host": "호스트"
 }
