--- a/app/i18n/tr-TR/settings.json
+++ b/app/i18n/tr-TR/settings.json
@@ -45,7 +45,7 @@
   "Output (Scaled) Resolution": "Çıkış (Ölçekli) Çözünürlüğü",
   "Downscale Filter": "Boyut düşürme filtresi",
   "Bilinear (Fastest, but blurry if scaling)": "Bilineer (En hızlısı, ama boyutlandırırken bulanık)",
-  "Bicubic (Sharpened scaling, 16 samples)": "Bikübik (Keskinleştirilimiş boyutlandırma, 16 çeşit)",
+  "Bicubic (Sharpened scaling, 16 samples)": "Bikübik (Keskinleştirilmiş boyutlandırma, 16 çeşit)",
   "Lanczos (Sharpened scaling, 32 samples)": "Lanczos (Keskinleştirilmiş boyutlandırma, 32 çeşit)",
   "No elements found. Consider changing the search query.": "Hiçbir öğe bulunamadı. Arama içeriğini değiştirmeyi deneyin.",
   "Do not back up my media files in the cloud (requires app restart)": "Medya dosyalarımı bulutta yedekleme (uygulamayı yeniden başlatma gerekir)",
@@ -64,7 +64,7 @@
   "Preserved cutoff point (increase delay) when reconnecting": "Yeniden bağlanırken korunan kesme noktası (gecikme arttır)",
   "Desktop Audio Device": "Masaüstü Ses Aygıtı",
   "Mic/Auxiliary Device": "Mik/yardımcı Aygıtı",
-  "Recording Path": "Kayıt Kalitesi",
+  "Recording Path": "Kayıt Dizini",
   "Enable": "Etkinleştir",
   "Default": "Varsayılan",
   "Custom Encoder Settings": "Özel Kodlayıcı Ayarları",
