kill layer terminology

--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -106,8 +106,8 @@
   "Name Folder": "Name Folder",
   "Rename Source": "Rename Source",
   "Name Source": "Name Source",
-  "Layer filters": "Layer filters",
-  "Add layer filter": "Add layer filter",
+  "Source filters": "Source filters",
+  "Add source filter": "Add source filter",
   "Reset Transform": "Reset Transform",
   "Flip Vertical": "Flip Vertical",
   "Flip Horizontal": "Flip Horizontal",
