Fix youtube follows to subscribers

--- a/app/i18n/en-US/sources.json
+++ b/app/i18n/en-US/sources.json
@@ -43,7 +43,7 @@
   "Set a goal for your viewers to help you reach.": "Set a goal for your viewers to help you reach.",
   "Follower Goal": "Follower Goal",
   "Twitch Follows": "Twitch Follows",
-  "Youtube Follows": "Youtube Follows",
+  "Youtube Follows": "Youtube Subscribers",
   "Mixer Follows": "Mixer Follows",
   "Bit Goal": "Bit Goal",
   "Twitch Bits": "Twitch Bits",
