--- a/app/i18n/en-US/scenes.json
+++ b/app/i18n/en-US/scenes.json
@@ -28,5 +28,8 @@
   "Your media files are currently being synced with the cloud. ": "Your media files are currently being synced with the cloud. ",
   "It is recommended that you wait until this finishes before going live.": "It is recommended that you wait until this finishes before going live.",
   "Go Live Anyway": "Go Live Anyway",
-  "Wait": "Wait"
+  "Wait": "Wait",
+  "Add a new Scene.": "Add a new Scene.",
+  "Remove Scene.": "Remove Scene.",
+  "Edit Scene Transitions.": "Edit Scene Transitions."
 }
