--- a/app/i18n/en-US/transitions.json
+++ b/app/i18n/en-US/transitions.json
@@ -1,5 +1,5 @@
 {
-  "Scene transition": "Scene transition",
+  "Scene Transitions": "Scene Transitions",
   "Cut": "Cut",
   "Fade": "Fade",
   "Swipe": "Swipe",
@@ -8,5 +8,7 @@
   "Luma Wipe": "Luma Wipe",
   "Stinger": "Stinger",
   "Transition": "Transition",
-  "Duration": "Duration"
+  "Duration": "Duration",
+  "Add Transition": "Add Transition",
+  "You need at least 1 transition.": "You need at least 1 transition."
 }
