working connections with edit UI

--- a/app/i18n/en-US/transitions.json
+++ b/app/i18n/en-US/transitions.json
@@ -10,5 +10,6 @@
   "Transition": "Transition",
   "Duration": "Duration",
   "Add Transition": "Add Transition",
-  "You need at least 1 transition.": "You need at least 1 transition."
+  "You need at least 1 transition.": "You need at least 1 transition.",
+  "Add Connection": "Add Connection"
 }
