--- a/app/i18n/en-US/media-gallery.json
+++ b/app/i18n/en-US/media-gallery.json
@@ -7,11 +7,15 @@
   "Copy URL": "Copy URL",
   "Browse the Gallery": "Browse the Gallery",
   "Cancel": "Cancel",
+  "OK": "OK",
   "Select": "Select",
   "You don't have any uploaded files!": "You don't have any uploaded files!",
   "You don't have any uploaded images!": "You don't have any uploaded images!",
   "You don't have any uploaded sounds!": "You don't have any uploaded sounds!",
   "Upload A File": "Upload A File",
   "Upload An Image": "Upload An Image",
-  "Upload A Sound": "Upload A Sound"
+  "Upload A Sound": "Upload A Sound",
+  "Are you sure you want to delete this file? This action is irreversable.": "Are you sure you want to delete this file? This action is irreversable.",
+  "Stock Files": "Stock Files",
+  "My Uploads": "My Uploads"
 }
