Completed styling for transitions window

--- a/app/i18n/en-US/transitions.json
+++ b/app/i18n/en-US/transitions.json
@@ -16,5 +16,10 @@
   "Ending Scene": "Ending Scene",
   "Scene Transition": "Scene Transition",
   "Type": "Type",
-  "Name": "Name"
+  "Transition Type": "Transition Type",
+  "Name": "Name",
+  "Transition Name": "Transition Name",
+  "Default": "Default",
+  "Deleted": "Deleted",
+  "This connection is redundant because another connection already connects these scenes.": "This connection is redundant because another connection already connects these scenes."
 }
