Add tooltips to widget components

--- a/app/i18n/en-US/widgets.json
+++ b/app/i18n/en-US/widgets.json
@@ -21,5 +21,7 @@
   "Subscription": "Subscription",
   "Donation": "Donation",
   "Bits": "Bits",
-  "Host": "Host"
+  "Host": "Host",
+  "The Google Font to use for the text. Visit http://google.com/fonts to find one! Popular Fonts include: Open Sans, Roboto, Oswald, Lato, and Droid Sans.": "The Google Font to use for the text. Visit http://google.com/fonts to find one! Popular Fonts include: Open Sans, Roboto, Oswald, Lato, and Droid Sans.",
+  "A hex code for the base text color.": "A hex code for the base text color."
 }
