fix collection swap bug and fix tests

--- a/app/i18n/en-US/transitions.json
+++ b/app/i18n/en-US/transitions.json
@@ -21,5 +21,6 @@
   "Transition Name": "Transition Name",
   "Default": "Default",
   "Deleted": "Deleted",
-  "This connection is redundant because another connection already connects these scenes.": "This connection is redundant because another connection already connects these scenes."
+  "This connection is redundant because another connection already connects these scenes.": "This connection is redundant because another connection already connects these scenes.",
+  "You need at least 2 scenes to edit transitions.": "You need at least 2 scenes to edit transitions."
 }
