fix ja-jp translation

--- a/app/i18n/ja-JP/audio.json
+++ b/app/i18n/ja-JP/audio.json
@@ -1,16 +1,16 @@
 {
-  "Open advanced audio settings": "高度なオーディオ設定を開く",
+  "Open advanced audio settings": "高度な音声設定を開く",
   "Volume (%)": "音量 (%)",
-  "Downmix to Mono": "モノにダウン ミックス",
+  "Downmix to Mono": "モノラルにダウンミックス",
   "Sync Offset (ms)": "同期オフセット (ミリ秒)",
-  "Audio Monitoring": "オーディオ ・ モニタリング",
-  "Monitor Off": "モニターをオフにする",
+  "Audio Monitoring": "音声モニタリング",
+  "Monitor Off": "モニターをオフ",
   "Monitor Only (mute output)": "モニターのみ (ミュート出力)",
   "Monitor and Output": "モニターと出力",
   "Tracks": "トラック",
-  "Advanced Audio Settings": "高度なオーディオ設定",
+  "Advanced Audio Settings": "高度な音声設定",
   "Volume ( % )": "音量 ( % )",
   "Sync Offset ( ms )": "同期オフセット (ミリ秒)",
   "Mixer": "ミキサー",
-  "Monitor audio levels. If the bars are moving you are outputting audio.": "オーディオ レベルを監視します。バーが動いている場合、オーディオを出力します。"
+  "Monitor audio levels. If the bars are moving you are outputting audio.": "音声レベルをモニターします。バーが動いている場合は音声を出力しています。"
 }
