--- a/app/i18n/ja-JP/filters.json
+++ b/app/i18n/ja-JP/filters.json
@@ -1,24 +1,24 @@
 {
-  "Image Mask/Blend": "イメージ マスク/ブレンド",
-  "Crop/Pad": "作物/パッド",
-  "Gain": "利得",
+  "Image Mask/Blend": "イメージマスク/ブレンド",
+  "Crop/Pad": "クロップ/パッド",
+  "Gain": "ゲイン",
   "Color Correction": "色補正",
-  "Scaling/Aspect Ratio": "拡大/縮小/アスペクト比",
+  "Scaling/Aspect Ratio": "拡大・縮小/アスペクト比",
   "Scroll": "スクロール",
-  "Render Delay": "遅延をレンダリングします。",
+  "Render Delay": "遅延描画",
   "Color Key": "色キー",
-  "Apply LUT": "LUT を適用します。",
-  "Sharpen": "シャープにする",
-  "Chroma Key": "クロマ キー",
-  "Video Delay (Async)": "ビデオの遅延 (Async)",
+  "Apply LUT": "LUT を適用",
+  "Sharpen": "シャープネス",
+  "Chroma Key": "クロマキー",
+  "Video Delay (Async)": "映像の遅延 (非同期)",
   "Noise Suppression": "ノイズ抑制",
   "Noise Gate": "ノイズゲート",
   "Compressor": "コンプレッサー",
   "VST 2.x Plugin": "VST 2.x プラグイン",
-  "Face Mask Plugin": "顔マスクのプラグイン",
+  "Face Mask Plugin": "フェイスマスクプラグイン",
   "Filter type": "フィルタータイプ",
   "Filter name": "フィルター名",
-  "Add source filter": "ソース フィルターを追加します。",
-  "No filters applied": "フィルターは適用されません。",
-  "Source filters": "ソース フィルター"
+  "Add source filter": "ソースフィルターを追加",
+  "No filters applied": "フィルターを適用しない",
+  "Source filters": "ソースフィルター"
 }
