--- a/app/i18n/ja-JP/notifications.json
+++ b/app/i18n/ja-JP/notifications.json
@@ -1,19 +1,19 @@
 {
   "You don't have any notifications": "通知がありません",
-  "Enable notifications": "通知を有効にします。",
-  "Enable sound": "サウンドを有効にします。",
-  "Skipped frames detected:": "スキップされたフレームは検出しました",
-  "Detect skipped frames": "スキップされたフレームを検出します。",
-  "Skipped frames threshold": "スキップされたフレームの限界",
-  "Detect lagged frames": "時間差フレームを検出します。",
+  "Enable notifications": "通知を有効",
+  "Enable sound": "サウンドを有効",
+  "Skipped frames detected:": "スキップされたフレームを検出しました",
+  "Detect skipped frames": "スキップされたフレームを検出",
+  "Skipped frames threshold": "スキップするフレームのしきい値",
+  "Detect lagged frames": "時間差フレームを検出",
   "Lagged frames threshold": "時間差フレームの限界",
-  "Detect dropped frames": "捨てられたフレームを検出します",
+  "Detect dropped frames": "ドロップフレームを検出",
   "Dropped frames threshold": "捨てられたフレームの限界",
-  "Show Notifications": "通知を表示します。",
+  "Show Notifications": "通知を表示",
   "Restore Defaults": "既定値に戻す",
   "Troubleshooter Notifications": "通知のトラブルシューティング",
-  "Click to open your Notifications window": "通知ウインドウを開くにはクリックします",
-  "Click to read your unread Notifications": "未読通知を読むにはクリックします",
+  "Click to open your Notifications window": "通知ウインドウを開くにはクリック",
+  "Click to read your unread Notifications": "未読通知を読むにはクリック",
   "New Notifications": "新しい通知",
   "Log": "ログ"
 }
