--- a/app/i18n/ja-JP/sources.json
+++ b/app/i18n/ja-JP/sources.json
@@ -1,66 +1,66 @@
 {
-  "Add Source": "ソースを追加します。",
-  "Add images to your scene.": "シーンに画像を追加します。",
-  "Add a slideshow of images to your scene.": "画像のスライドショーをシーンに追加します。",
-  "Add videos or sound clips to your scene.": "動画や録音をシーンに追加します。",
-  "Capture a specific window that's open on your computer.": "あなたのパスコンで特定の現在開いているウインドーをキャプチャします。",
+  "Add Source": "ソースを追加",
+  "Add images to your scene.": "シーンに画像を追加",
+  "Add a slideshow of images to your scene.": "画像のスライドショーをシーンに追加",
+  "Add videos or sound clips to your scene.": "映像や音声をシーンに追加",
+  "Capture a specific window that's open on your computer.": "現在開いている特定のウィンドウをキャプチャ",
   "Compatible with most modern browsers and programs": "大部のブラウザやプログラムと適合しています。",
-  "Select from your build in USB webcam or an external.": "統合USBウェブカムまたは外付けウェブカムを選択します。",
-  "Built in webcam": "統合ウェブカム",
-  "Logitech webcam": "Logitechウェブカム",
+  "Select from your build in USB webcam or an external.": "統合USBWebカメラまたは外付けWebカメラを選択",
+  "Built in webcam": "統合Webカメラ",
+  "Logitech webcam": "LogitechWebカメラ",
   "Capture cards (Elgato, Avermedia, BlackMagic)": "キャプチャーカード(Elgato, Avermedia, BlackMagic)",
-  "Captures your desktop audio for the purpose of playing sound, such as music or speech.": "録音（音楽・スピーチ）を再生するためデスクトップオーディオをキャプチャーします。",
-  "Desktop audio": "デスクトップオーディオ",
-  "Add a color to the background of your whole scene or just a part.": "背景に全部的に、または部分的に色を追加します。",
+  "Captures your desktop audio for the purpose of playing sound, such as music or speech.": "録音（音楽・スピーチ）を再生するためデスクトップ音声をキャプチャー",
+  "Desktop audio": "デスクトップ音声",
+  "Add a color to the background of your whole scene or just a part.": "背景すべて、または部分的に色を追加",
   "Allows you to add web-based content as a source, such as web pages and Flash SWFs.": "WebページやFlash SWFなど、Webベースのコンテンツをソースとして追加できます。",
   "Websites": "ウェブサイト",
   "Third party widget": "サードパーティ製のウィジェット",
-  "Add text to your scene and adjust its style.": "あなたのシーンにテキストを追加し、そのスタイルを調整します。",
-  "System Fonts": "システム フォント",
+  "Add text to your scene and adjust its style.": "シーンにテキストを追加しスタイルを調整",
+  "System Fonts": "システムフォント",
   "System Sizes": "システムのサイズ",
-  "Capture your entire computer monitor.": "あなたの全体のコンピューターのモニターをキャプチャーします。",
-  "Primary monitor": "プライマリー モニター",
-  "Secondary monitor": "セカンダリー モニター",
-  "Capture a game you're playing on your computer.": "コンピューターで遊んでいるゲームをキャプチャーします。",
-  "Built in works with most modern computer games": "ほとんどの最新のコンピュータゲームで動作する",
-  "Allow you to capture NDI output streams.": "NDI の出力ストリームをキャプチャ－することができます。",
-  "Any device that attaches to a computer for the purpose of capturing sound, such as music or speech.": "音楽や音声などのサウンドをキャプチャーする目的でコンピューターに接続するすべてのデバイス。",
-  "Built in microphones": "内蔵のマイク",
-  "USB microphones": "USB マイク",
-  "Other USB devices": "他の USB デバイス",
-  "Capture the feed your decklink device is capturing.": "Decklink デバイスをキャプチャーしているフィードをキャプチャーします。",
-  "Works with most of the recent Blackmagic cards.": "最近の Blackmagic カードのほとんどで動作出来ます。",
-  "Thanks viewers with notification popups.": "視聴者にありがとうの通知をポップアップさせる。",
-  "Donations": "寄付金",
+  "Capture your entire computer monitor.": "モニター全体をキャプチャー",
+  "Primary monitor": "プライマリーモニター",
+  "Secondary monitor": "セカンダリーモニター",
+  "Capture a game you're playing on your computer.": "プレイ中のゲームをキャプチャー",
+  "Built in works with most modern computer games": "ほとんどの最新のコンピュータゲームで動作します",
+  "Allow you to capture NDI output streams.": "NDIの出力ストリームをキャプチャ－することができます。",
+  "Any device that attaches to a computer for the purpose of capturing sound, such as music or speech.": "音楽や音声などのサウンドをキャプチャーする目的でコンピューターに接続するすべてのデバイス",
+  "Built in microphones": "内蔵マイク",
+  "USB microphones": "USBマイク",
+  "Other USB devices": "他のUSBデバイス",
+  "Capture the feed your decklink device is capturing.": "Decklinkデバイスをキャプチャーしているフィードをキャプチャー",
+  "Works with most of the recent Blackmagic cards.": "ほとんどの最新のBlackmagicカードで動作します。",
+  "Thanks viewers with notification popups.": "通知ポップアップで視聴者に感謝を送る",
+  "Donations": "寄付",
   "Subscriptions": "サブスクリプション",
   "Follows": "フォロー",
   "Bits": "ビット",
   "Hosts": "ホスト",
-  "Show off your most recent donations to your viewers.": "最新の寄付を視聴者に見せる.",
-  "Include your channel's most recent events into your stream.": "あなたのチャンネルの最新イベントを入れてください。",
+  "Show off your most recent donations to your viewers.": "最新の寄付を視聴者に表示する",
+  "Include your channel's most recent events into your stream.": "チャンネルの最新イベントを入れてください。",
   "Redemptions": "リダンプション",
-  "Donation Goal": "寄付の目標",
-  "Set a goal for your viewers to help you reach.": "視聴者の手助けとなる目標を設定します。",
-  "Follower Goal": "フォロワー目的",
+  "Donation Goal": "寄付のゴール",
+  "Set a goal for your viewers to help you reach.": "視聴者の手助けとなるゴールを設定",
+  "Follower Goal": "フォロワーゴール",
   "Twitch Follows": "Twitchのフォロワー",
   "Youtube Follows": "Youtube のフォロワー",
   "Mixer Follows": "Mixerのフォロワー",
-  "Bit Goal": "ビッツの目標",
+  "Bit Goal": "ビッツのゴール",
   "Twitch Bits": "Twitchビッツ",
-  "Subscription Goal": "サブスクリプションの目標",
+  "Subscription Goal": "サブスクリプションのゴール",
   "Youtube Subscribers": "YouTubeのサブスクライバー",
   "Chatbox": "チャット ボックス",
   "Include your channel's chat into your stream.": "ストリーム内のチャンネルのチャットをストーリム含めます。",
   "Twitch chat": "Twitchチャット",
   "Youtube chat": "YouTubeチャット",
-  "The Jar": "瓶",
-  "The jar that catches bits, tips, and more.": "ビッツやチップ、他の物を集めるジャー.",
-  "Viewer Count": "視聴者カウント",
-  "Show off your viewers from multiple platforms.": "複数のプラットフォームから視聴者を見せてください。",
+  "The Jar": "ジャー",
+  "The jar that catches bits, tips, and more.": "ビッツやチップ、他の物を集めるジャー",
+  "Viewer Count": "視聴者数",
+  "Show off your viewers from multiple platforms.": "複数のプラットフォームの視聴者へ見せる",
   "Stream Boss": "ストリームボス",
   "Battle with bits to be the boss of the stream!": "ストリームのボスになるためビッツと戦う!",
   "Credits": "クレジット",
-  "Rolling credits to play at the end of your stream.": "ストリームの終わりにクレジットを流す.",
+  "Rolling credits to play at the end of your stream.": "ストリームの終わりにクレジットを流す",
   "New Followers": "新しいフォロワー",
   "New Subscribers": "新しいサブスクライバー",
   "Cheers": "応援",
@@ -87,58 +87,58 @@
   "Donation Ticker": "寄付金ティッカー",
   "The source name is required": "ソースの名前が必要です。",
   "Unable to add a source: the scene you are trying to add already contains your current scene": "ソースを追加できません：追加しようとしているシーンには、現在のシーンが既に含まれています",
-  "Add New Source": "新しいソースを追加します。",
+  "Add New Source": "新しいソースを追加",
   "Please enter the name of the source": "ソースの名前を入力して下さい。",
-  "Add Existing Source": "すでにあるソースを追加します。",
+  "Add Existing Source": "すでにあるソースを追加",
   "Recommended": "おすすめ",
   "Please enter the name of the folder": "フォルダーの名前を入力して下さい。",
   "Properties for %{sourceName}": "%{sourceName} のプロパティ",
   "Supports": "サポート",
   "Widget Type": "ウィジェットタイプ",
-  "Configure": "構成します。",
-  "Go To Widget Settings": "ウィジェット設定にいく",
-  "Test Widgets": "ウィジェットをテストする",
-  "Hide Test Widgets": "テストウィジェットを非表示する",
+  "Configure": "構成",
+  "Go To Widget Settings": "ウィジェット設定",
+  "Test Widgets": "ウィジェットをテスト",
+  "Hide Test Widgets": "テストウィジェットを非表示",
   "Add Folder": "フォルダーを追加",
-  "Remove Sources": "ソースを削除します。",
-  "Setup Source Properties": "ソースのプロパティを設定します。",
+  "Remove Sources": "ソースを削除",
+  "Setup Source Properties": "ソースのプロパティを設定",
   "Rename Folder": "フォルダーの名前を変更",
   "Name Folder": "フォルダーに名前をつける",
-  "Rename Source": "ソースの名前変更します。",
+  "Rename Source": "ソースの名前変更",
   "Name Source": "ソースに名前をつける",
   "Layer filters": "フィルターをレイヤーする",
-  "Add layer filter": "レイヤーのフィルターを追加する",
-  "Reset Transform": "変換をリセットします。",
-  "Flip Vertical": "垂直に反転します。",
-  "Flip Horizontal": "水平に反転します。",
+  "Add layer filter": "レイヤーのフィルターを追加",
+  "Reset Transform": "変換をリセット",
+  "Flip Vertical": "垂直に反転",
+  "Flip Horizontal": "水平に反転",
   "Stretch to Screen": "画面に合わせる",
   "Fit to Screen": "画面に合わせる",
-  "Center on Screen": "画面上のセンターにする",
-  "Rotate 90 Degrees CW": "時計回りに 90 度回転します。",
-  "Rotate 90 Degrees CCW": "反時計回りに 90 度回転します。",
-  "Rotate 180 Degrees": "180 度回転します。",
+  "Center on Screen": "画面中央にする",
+  "Rotate 90 Degrees CW": "時計回りに 90 度回転",
+  "Rotate 90 Degrees CCW": "反時計回りに 90 度回転",
+  "Rotate 180 Degrees": "180 度回転",
   "Paste (Reference)": "ペースト (リファレンス)",
   "Paste (Duplicate)": "ペースト (重複)",
-  "Invert Selection": "選択範囲を反転します。",
+  "Invert Selection": "選択範囲を反転",
   "Transform": "変換",
-  "Export Widget": "ウィジェットをエクスポートします。",
-  "Copy Filters": "フィルターをコピーします。",
-  "Paste Filters": "フィルターをペーストする",
+  "Export Widget": "ウィジェットをエクスポート",
+  "Copy Filters": "フィルターをコピー",
+  "Paste Filters": "フィルターをペースト",
   "Properties": "プロパティー",
-  "Lock Sources": "ソースをロックする",
-  "Unlock Sources": "ソースのロックを解除します。",
+  "Lock Sources": "ソースをロック",
+  "Unlock Sources": "ソースのロックを解除",
   "Group into Folder": "フォルダーにグループ",
-  "Ungroup Folder": "フォルダーのグループを解除します。",
-  "Group into Scene": "シーンに グループ",
-  "Ungroup Scene": "シーンのグループを解除します。",
-  "Create Source Projector": "ソースプロジェクターを作成します。",
+  "Ungroup Folder": "フォルダーのグループを解除",
+  "Group into Scene": "シーンにグループ",
+  "Ungroup Scene": "シーンのグループを解除",
+  "Create Source Projector": "ソースプロジェクターを作成",
   "Click \"Add Source\" when you're ready to add it to your scene": "シーンに追加する準備ができたら、[ソースを追加]をクリックして下さい",
-  "BrowserSource": "ブラウザー・ソース",
-  "NDI source": "NDI のソース",
-  "Use Google Font": "Google のフォントを使う",
+  "BrowserSource": "ブラウザーソース",
+  "NDI source": "NDIソース",
+  "Use Google Font": "Googleフォントを使う",
   "Center Horizontal": "横方向中央揃え",
   "Center Vertical": "縦方向中央揃え",
-  "Unhide All": "すべて再表示します。",
-  "Cloud Backup: All media and sources are backed up in the cloud": "クラウド バックアップ: すべてのメディアやソースがクラウド内でバックアップされております",
-  "Cloud Backup: Your media and sources are being synced with the cloud": "クラウドバックアップ：メディアとソースがクラウドと同期されております"
+  "Unhide All": "すべて再表示",
+  "Cloud Backup: All media and sources are backed up in the cloud": "クラウドバックアップ: すべてのメディアやソースがクラウド内でバックアップされています",
+  "Cloud Backup: Your media and sources are being synced with the cloud": "クラウドバックアップ：メディアとソースがクラウドと同期されています"
 }
