--- a/app/i18n/ja-JP/onboarding.json
+++ b/app/i18n/ja-JP/onboarding.json
@@ -1,39 +1,39 @@
 {
-  "We are improving our backend systems. As part of the migration process, we will need to you log in again. If you have any questions, you can": "バックエンドのシステムを改善しています。データの移動のプロセスには、またログインをしなくてはならないことになりました。質問はあれば、",
-  "contact support.": "サポートにお問い合わせをしてください。",
-  "Sign in with your Twitch or Youtube account to get started with Streamlabs": "StreamLabsを使い始めるにはTwitch、またはYouTubeアカウントでログインします",
-  "Select an OBS profile to import": "導入したいOBSプロファイルを選択します",
-  "Import from OBS": "OBSから導入します",
-  "Start Fresh": "改めて開始します",
-  "Importing": "導入中です",
-  "Successfully Imported": "導入は成功しました",
-  "Importing your scenes and sources": "シーンとソースを導入しています。",
-  "All scenes, sources and settings have been imported.": "シーンとソースと設定は導入しました。",
-  "Import your scenes and your settings from OBS with a simple click, or start fresh.": "シーンと決定をOBSから導入し、クリックするだけで改めて使い始めます。",
-  "Click below and we'll analyze your internet speed and computer hardware to give you the best settings possible.": "下記をクリックするとインタネット速度やコンピューターハードウェアを検査し、一番適当な決定をお勧めします。",
+  "We are improving our backend systems. As part of the migration process, we will need to you log in again. If you have any questions, you can": "バックエンドのシステムを改善しています。移行プロセスの一環として、再度ログインする必要があります。質問があれば",
+  "contact support.": "にお問い合わせをしてください。",
+  "Sign in with your Twitch or Youtube account to get started with Streamlabs": "StreamLabsを使い始めるにはTwitch、またはYouTubeアカウントでログインしてください",
+  "Select an OBS profile to import": "インポートしたいOBSプロファイルを選択",
+  "Import from OBS": "OBSからインポート",
+  "Start Fresh": "インポートせずに開始",
+  "Importing": "インポート中",
+  "Successfully Imported": "インポートに成功しました",
+  "Importing your scenes and sources": "シーンとソースをインポート中",
+  "All scenes, sources and settings have been imported.": "シーン、ソースと設定のインポートが完了しました。",
+  "Import your scenes and your settings from OBS with a simple click, or start fresh.": "シーンや設定をOBSからインポートするか、インポートせずにそのまま開始するかを選択してください。",
+  "Click below and we'll analyze your internet speed and computer hardware to give you the best settings possible.": "以下をクリックするとインターネット速度やコンピューターハードウェアを分析し、最も適切な設定にすることができます。",
   "Start": "スタート",
-  "Rather do this manually?": "手動で行いますか？",
-  "Setup later": "後でセットアップをする",
-  "Detecting your location ...": "場所を検出しています。",
+  "Rather do this manually?": "または手動で行いますか？",
+  "Setup later": "後でセットアップする",
+  "Detecting your location ...": "場所を検出しています…",
   "Detected %{continent}": "%{continent} を検出しました",
-  "Performing bandwidth test ...": "帯域の検査を行っています。",
-  "Testing streaming encoder ...": "ストリームのエンコーダを検査しています。",
-  "Testing recording encoder ...": "録画エンコーダを検査しています。",
-  "Attempting stream ...": "ストリームを試みています。",
-  "Reverting to defaults ...": "デフォルトに戻しています。",
-  "Applying stream settings ...": "ストリームの設定を適用しています。",
-  "Applying general settings ...": "全般的な設定を適用しています。",
+  "Performing bandwidth test ...": "帯域のテストを行っています…",
+  "Testing streaming encoder ...": "ストリームのエンコーダーのテストしています…",
+  "Testing recording encoder ...": "録画エンコーダのテストしています…",
+  "Attempting stream ...": "ストリームを試みています…",
+  "Reverting to defaults ...": "デフォルトに戻しています…",
+  "Applying stream settings ...": "ストリームの設定を適用しています…",
+  "Applying general settings ...": "一般設定を適用しています…",
   "Optimize": "最適化",
-  "We're connecting to OBS and pulling your previous settings for a seamless conversion.": "無事通過の転換をするため、OBSに接続し、前の設定を導入します。",
-  "Initialzing ...": "初期化しています。",
-  "Connecting to OBS ...": "OBSに接続しています。",
-  "Pulling settings ...": "設定を導入しています。",
-  "Starting import ...": "導入を開始しています。",
-  "Finalizing ...": "まとめています。",
-  "We're analyzing your internet speed and computer hardware to give you the best settings possible.": "一番適当な設定をお勧めするため、インタネット速度やコンピューターハッドウェアを検査しています。",
-  "Done!": "完成!",
+  "We're connecting to OBS and pulling your previous settings for a seamless conversion.": "シームレスな移行のため、OBSに接続して以前の設定を引き継ぎます。",
+  "Initialzing ...": "初期化中…",
+  "Connecting to OBS ...": "OBSに接続中…",
+  "Pulling settings ...": "設定を導入中…",
+  "Starting import ...": "インポートを開始しています…",
+  "Finalizing ...": "ファイナライズ処理中…",
+  "We're analyzing your internet speed and computer hardware to give you the best settings possible.": "最も適切な設定にするため、インターネット速度やコンピューターハードウェアを分析しています",
+  "Done!": "完了しました!",
   "Next": "次へ",
-  "Scene Collections Import": "シーン コレクションのインポート",
-  "The following scene collections have been imported from your Streamlabs account": "下記のシーンコレクションはStreamlabsアカウントから導入されました。",
-  "Continue": "続きます"
+  "Scene Collections Import": "シーンコレクションのインポート",
+  "The following scene collections have been imported from your Streamlabs account": "以下のシーンコレクションはStreamlabsアカウントからインポートされました。",
+  "Continue": "続ける"
 }
