--- a/app/i18n/ja-JP/overlays.json
+++ b/app/i18n/ja-JP/overlays.json
@@ -2,7 +2,7 @@
   "Successfully saved %{filename}": "%{filename} を保存しました。",
   "Successfully loaded %{filename}.overlay": "%{filename}.overlay を読み込みしました。",
   "This is an experimental feature.  Use at your own risk.": "試験的な機能です。自己責任で使用してご注意下さい。",
-  "Export Overlay File": "オーバーレイを輸出します。",
-  "Import Overlay File": "オーバーレイを導入します。",
-  "Import Widget File in Current Scene": "選択したシーンにウイジェットを導入します。"
+  "Export Overlay File": "オーバーレイを輸出",
+  "Import Overlay File": "オーバーレイを導入",
+  "Import Widget File in Current Scene": "選択したシーンにウイジェットを導入"
 }
