--- a/app/i18n/ja-JP/settings.json
+++ b/app/i18n/ja-JP/settings.json
@@ -1,73 +1,73 @@
 {
-  "General": "全般的",
+  "General": "一般",
   "Stream": "ストリーム",
-  "Output": "アウトプット",
-  "Audio": "オーディオ",
-  "Video": "ビデオ",
+  "Output": "出力",
+  "Audio": "音声",
+  "Video": "映像",
   "Hotkeys": "ホットキー",
   "Advanced": "詳細設定",
   "Overlays": "オーバーレイ",
   "Notifications": "通知",
-  "Appearance": "面目",
-  "Remote Control": "リモート コントロール",
-  "Night mode": "夜モード",
-  "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "奇妙な動作が発生した場合は、キャッシュディレクトリを排除してみて下さい。シーンのコンフィグや設定も失われますが、安定問題を治せる可能性はあります。",
-  "Show Cache Directory": "キャッシュディレクトリを表示します。",
-  "Delete Cache and Restart": "キャッシュを排除して再起動します。",
-  "Upload Cache to Developers": "開発元へキャッシュをアップロードします。",
-  "Restart Streamlabels Session": "Streamlabelsのセッションを再起動します。",
-  "Run Auto Optimizer": "自動オプティマイザーを実行します。",
-  "Confirm stream title and game before going live": "ライブになる前にストリームのタイトルとゲームを確認して下さい。",
-  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "警告！シーンとソースと設定を排除しています。もとに戻すことはできません！",
-  "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "キャッシュダイレクトリのアップロードは成功しました。%{file} 名乗ったファイルはクリップボードにコピーされました。Discordにペーストして開発元をタッグしてください。",
-  "Streamlabels session has been succesfully restarted!": "Streamlabelsセッションの再起動は成功しました！",
-  "This action will restart the application. Continue?": "アプリは再起動します。続行してもよろしいですか？",
-  "Show confirmation dialog when starting streams": "ストリームを開始する時に確認ダイアログを表示する",
-  "Show confirmation dialog when stopping streams": "ストリームを終了する時に確認ダイアログを表示する",
+  "Appearance": "外観",
+  "Remote Control": "リモートコントロール",
+  "Night mode": "ナイトモード",
+  "If you are experiencing weird behavior, you can try deleting your cache directory.  This will result in you losing your scene configuration and settings, but can fix some stability issues.": "奇妙な動作が発生した場合は、キャッシュディレクトリを削除してみて下さい。シーンのコンフィグや設定も失われますが、安定性の問題が解決する可能性があります。",
+  "Show Cache Directory": "キャッシュディレクトリを表示",
+  "Delete Cache and Restart": "キャッシュを削除して再起動",
+  "Upload Cache to Developers": "開発元へキャッシュをアップロード",
+  "Restart Streamlabels Session": "Streamlabelsのセッションを再起動",
+  "Run Auto Optimizer": "自動オプティマイザーを実行",
+  "Confirm stream title and game before going live": "ライブする前にストリームのタイトルとゲームを確認して下さい。",
+  "WARNING! You will lose all scenes, sources, and settings. This cannot be undone!": "【警告】シーンとソースと設定を削除しています。元に戻すことはできません！",
+  "Your cache directory has been successfully uploaded.  The file name %{file} has been copied to your clipboard.  Please paste it into discord and tag a developer.": "キャッシュダイレクトリのアップロードに成功しました。%{file}のファイルはクリップボードにコピーされました。Discordにペーストして開発にタグ付与してください。",
+  "Streamlabels session has been succesfully restarted!": "Streamlabelsセッションの再起動に成功しました！",
+  "This action will restart the application. Continue?": "アプリを再起動します。続行してもよろしいですか？",
+  "Show confirmation dialog when starting streams": "ストリームを開始する時に確認ダイアログを表示",
+  "Show confirmation dialog when stopping streams": "ストリームを終了する時に確認ダイアログを表示",
   "Automatically record when streaming": "ストリーミング時に自動的に録画",
   "Keep recording when stream stops": "ストリームが停止しても録画を続ける",
   "Source Alignement Snapping": "ソースの配置をスナップする",
   "Snap Sources to edge of screen": "ソースを画面の端にスナップする",
-  "Snap Sources to other sources": "他のソースにソースをスナップする",
+  "Snap Sources to other sources": "他のソースにスナップする",
   "Stream Type": "ストリームタイプ",
   "Output Mode": "出力モード",
   "Streaming": "ストリーミング",
   "Enable Advanced Encoder Settings": "高度なエンコーダ設定を有効にする",
-  "Enforce streaming service bitrate limits": "ストリーミングサービスのビットレート制限を強制する",
+  "Enforce streaming service bitrate limits": "ストリーミングサービスのビットレート制限を強制的に適応する",
   "Encoder Preset (Higher = Less CPU)": "エンコーダのプリセット（より高い=より少ないCPU）",
   "Generate File Name without Space": "スペースなしでファイル名を生成する",
-  "Recording": "記録",
-  "Recording Quality": "リコーディングのクオリティ",
-  "Recording Format": "リコーディングのフォーマット",
-  "Custom Muxer Settings": "カスタムのMuxerの設定",
-  "Enable Replay Buffer": "再生バッファーを有効にします。",
+  "Recording": "録画",
+  "Recording Quality": "録画のクオリティ",
+  "Recording Format": "録画のフォーマット",
+  "Custom Muxer Settings": "Muxerのカスタム設定",
+  "Enable Replay Buffer": "リプレイバッファを有効にする",
   "Base (Canvas) Resolution": "ベース（キャンバス）解像度",
   "Output (Scaled) Resolution": "出力（スケーリング）解像度",
-  "Downscale Filter": "ダウンスケール・フィルター",
-  "Bilinear (Fastest, but blurry if scaling)": "バイリニア（最速ですが、スケーリングした場合はぼやけます）",
+  "Downscale Filter": "ダウンスケールフィルター",
+  "Bilinear (Fastest, but blurry if scaling)": "バイリニア（最速ですが、スケーリングした場合にぼやけます）",
   "Bicubic (Sharpened scaling, 16 samples)": "バイキュービック（鮮明なスケーリング、16サンプル）",
-  "Lanczos (Sharpened scaling, 32 samples)": "Lanczos（シャープスケーリング、32サンプル）",
-  "No elements found. Consider changing the search query.": "要素が見つかりませんでした。 検索語を変更することを検討してください。",
+  "Lanczos (Sharpened scaling, 32 samples)": "Lanczos（鮮明なスケーリング、32サンプル）",
+  "No elements found. Consider changing the search query.": "見つかりませんでした。 検索するワードを変更してみてください。",
   "Do not back up my media files in the cloud (requires app restart)": "メディアファイルをクラウドにバックアップしないでください（アプリの再起動が必要です）",
   "FPS Type": "FPSのタイプ",
-  "Common FPS Values": "一般的な FPS の値",
+  "Common FPS Values": "一般的なFPSの値",
   "Integer FPS Value": "整数FPS値",
   "Fractional FPS Value": "フラクショナルFPS値",
   "Process Priority": "プロセスの優先順位",
-  "Color Format": "色のフォーマット",
-  "Audio Monitoring Device": "オーディオ監視デバイス",
-  "Disable Windows audio ducking": "Windows オーディオ ダッキングを無効にします。",
+  "Color Format": "カラーフォーマット",
+  "Audio Monitoring Device": "音声モニタリングデバイス",
+  "Disable Windows audio ducking": "Windows 音声ダッキングを無効に",
   "YUV Color Space": "YUVカラースペース",
   "YUV Color Range": "YUVカラーレンジ",
   "Stream Delay": "ストリームの遅延",
   "Duration (Seconds)": "継続時間 (秒)",
   "Preserved cutoff point (increase delay) when reconnecting": "再接続時のカットオフポイントの保存（遅延の増加）",
-  "Desktop Audio Device": "デスクトップオーディオデバイス",
+  "Desktop Audio Device": "デスクトップ音声デバイス",
   "Mic/Auxiliary Device": "マイク/補助装置",
-  "Recording Path": "リコーディングのパス",
+  "Recording Path": "録画するファイルのパス",
   "Enable": "有効",
   "Default": "デフォルト",
   "Custom Encoder Settings": "カスタムのエンコーダー設定",
-  "Audio Bitrate": "オーディオ ビット レート",
+  "Audio Bitrate": "音声ビットレート",
   "Video Bitrate": "映像ビットレート"
 }
