--- a/app/i18n/ja-JP/source-props.json
+++ b/app/i18n/ja-JP/source-props.json
@@ -1,17 +1,17 @@
 {
-    "Image": "イメージ",
-    "Color Source": "色のソース",
-    "Browser Source": "ブラウザーのソース",
-    "Media Source": "メディア ソース",
+    "Image": "画像",
+    "Color Source": "カラーソース",
+    "Browser Source": "ブラウザーソース",
+    "Media Source": "メディアソース",
     "Image Slide Show": "画像スライド ショー",
-    "Text (GDI+)": "テキスト (GDI +)",
-    "Text (FreeType 2)": "テキスト (FreeType 2)",
-    "Display Capture": "キャプチャーを表示します。",
-    "Window Capture": "ウィンドウのキャプチャー",
-    "Game Capture": "ゲームの キャプチャー",
-    "Video Capture Device": "ビデオ キャプチャー デバイス",
-    "Audio Input Capture": "オーディオ入力のキャプチャー",
-    "Audio Output Capture": "オーディオ出力のキャプチャー",
-    "Blackmagic Device": "Blackmagic デバイス",
-    "NDI Source": "NDI のソース"
+    "Text (GDI+)": "テキスト (GDI+)",
+    "Text (FreeType 2)": "テキスト (FreeType2)",
+    "Display Capture": "キャプチャーを表示",
+    "Window Capture": "ウィンドウキャプチャー",
+    "Game Capture": "ゲームキャプチャー",
+    "Video Capture Device": "映像キャプチャーデバイス",
+    "Audio Input Capture": "音声入力キャプチャー",
+    "Audio Output Capture": "音声出力キャプチャー",
+    "Blackmagic Device": "Blackmagicデバイス",
+    "NDI Source": "NDIソース"
 }
