--- a/app/i18n/ja-JP/streamlabels.json
+++ b/app/i18n/ja-JP/streamlabels.json
@@ -1,19 +1,19 @@
 {
   "Label Type": "ラベルの種類",
-  "Label Template": "ラベル ・ テンプレート",
-  "Item Template": "アイテム・テンプレート",
+  "Label Template": "ラベルテンプレート",
+  "Item Template": "アイテムテンプレート",
   "Item Separator": "アイテムを分ける",
   "Item Limit": "アイテムの制限",
   "Duration (seconds)": "継続時間 (秒)",
-  "Show Clock": "時計を表示します。",
-  "Always, show 0:00 when inactive": "アクティブではない時は常に0:00を表示する",
-  "Hide when inactive": "アクティブでないときに非表示します。",
-  "Show Count": "カウントを表示します。",
-  "Always, show 0 when inactive": "アクティブではない時は常に0を表示する",
+  "Show Clock": "時計を表示",
+  "Always, show 0:00 when inactive": "アクティブではない時は常に0:00を表示",
+  "Hide when inactive": "アクティブでないときに非表示",
+  "Show Count": "カウントを表示",
+  "Always, show 0 when inactive": "アクティブではない時は常に0を表示",
   "Show Latest": "最新を表示",
-  "Always, show last person when inactive": "アクティブではない時は常に最後の人を表示する",
+  "Always, show last person when inactive": "アクティブではない時は常に最新を表示",
   "Include Resubs": "リサブを含める",
   "Preview": "プレビュー",
   "Note:": "メモ:",
-  "Actual label text may take up to 60 seconds to update": "実際のラベルテキストが更新されるまでに最大60秒かかります"
+  "Actual label text may take up to 60 seconds to update": "実際のラベルテキストが更新されるまでに最大60秒かかります。"
 }
