--- a/app/i18n/ja-JP/transitions.json
+++ b/app/i18n/ja-JP/transitions.json
@@ -1,12 +1,12 @@
 {
-  "Scene transition": "シーン切り替え",
+  "Scene transition": "シーントランジション",
   "Cut": "カット",
   "Fade": "フェード",
   "Swipe": "スワイプ",
   "Slide": "スライド",
-  "Fade to Color": "カラーにフェードします。",
+  "Fade to Color": "カラーにフェード",
   "Luma Wipe": "ルミナンス ワイプ",
   "Stinger": "スティンガー",
-  "Transition": "遷移",
-  "Duration": "期間"
+  "Transition": "トランジション",
+  "Duration": "切り替え時間"
 }
