--- a/app/i18n/ja-JP/troubleshooter.json
+++ b/app/i18n/ja-JP/troubleshooter.json
@@ -1,26 +1,26 @@
 {
-  "Troubleshooter": "トラブルシューティング ツール",
+  "Troubleshooter": "トラブルシューティング",
   "Open Settings": "設定を開く",
-  " Streamlabs OBS has detected dropped frames": " Streamlabs OBSはドロップしたフレームを検出しました",
-  "What does this mean?": "これは何を意味するのでしょうか。",
-  " Some frames have not been uploaded. This problem is usually related to a poor network connection.": " 一部のフレームがアップロードされていません。 この問題は、ネットワーク接続が不良であることに関連しています。",
-  "What can I do?": "私は何ができるですか。",
+  " Streamlabs OBS has detected dropped frames": "ドロップフレームを検出しました",
+  "What does this mean?": "これが意味するのは",
+  " Some frames have not been uploaded. This problem is usually related to a poor network connection.": " 一部のフレームがアップロードおらず、これはネットワーク接続の不調に関連しています。",
+  "What can I do?": "以下をお試しください。",
   "Check the health of your Internet connection": "インターネット接続の状態を確認する",
   "Change your ingest server": "インジェストサーバーを変更",
   "If none of these worked, lower your bitrate": "これらのどれもうまく動作しない場合は、ビットレートを下げてください",
-  "Streamlabs OBS has detected skipped frames": "Streamlabs OBSはスキップしたフレームを検出しました",
-  "Some frames have not been encoded.": "いくつかのフレームはエンコードされていません。",
+  "Streamlabs OBS has detected skipped frames": "スキップフレームを検出しました",
+  "Some frames have not been encoded.": "一部のフレームがエンコードされていません。",
   "This problem is usually due to high CPU usage or unsuitable encoder settings.": "この問題は通常、CPU使用率が高いか、不適切なエンコーダ設定が原因で発生します。",
   "Lower your encoder settings (preset)": "エンコーダー設定を下げる（プリセット）",
-  "Ensure that you don't have any other applications open that are heavy on your CPU": "あなたのCPUに重い他のアプリケーションを開いていないことを確認してください",
-  "Enable performance mode in the Editor context menu": "エディターのコンテキスト メニューでパフォーマンス モードを有効にします。",
-  "Streamlabs OBS has detected lagged frames": "Streamlabs OBSはラグしたフレームを検出しました",
-  "Some frames took too long to get rendered.": "いくつかのフレームを描画するのにも時間がかかりました。",
-  "Usually the problem is related to your game using up too many GPU resources.": "通常、この問題は、あまりにも多くのGPUリソースを使用しているゲームに関連しています。",
-  "When this happens, Streamlabs OBS does not have any resources left over to render frames.": "これが発生すると、Streamlabs OBSにはフレームをレンダリングするためのリソースが残りません。",
+  "Ensure that you don't have any other applications open that are heavy on your CPU": "他の重いアプリケーションを開いていないことを確認してください",
+  "Enable performance mode in the Editor context menu": "エディターの右クリックのメニューでパフォーマンス モードを有効にする",
+  "Streamlabs OBS has detected lagged frames": "ラグのあるフレームを検出しました",
+  "Some frames took too long to get rendered.": "一部のフレームを描画するのに時間がかかりました。",
+  "Usually the problem is related to your game using up too many GPU resources.": "この問題は通常、GPUリソースを使用しすぎているゲームに関連して発生します。",
+  "When this happens, Streamlabs OBS does not have any resources left over to render frames.": "これが発生すると、フレームをレンダリングするための余力が残りません。",
   "Cap your in-game framerate": "ゲーム内のフレームレートを制限する",
-  "Enable VSync in your game": "あなたのゲーム内で VSync を有効にします。",
+  "Enable VSync in your game": "あなたのゲーム内でVSyncを有効にする",
   "Disable FreeSync or GSync in your Driver": "ドライバー内のFreeSyncかGSyncを無効にする",
-  "Lower graphics settings until you stop lagging frames": "遅れフレームを停止するまでグラフィックス設定を低くする",
-  "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)": "任意のメディアソースの下でハードウェアのデコードを無効にする（これはGPUよりCPUをわずかに増加させる）"
+  "Lower graphics settings until you stop lagging frames": "遅延フレームがなくなるまでグラフィックス設定を低くする",
+  "Disable hardware decoding under any media sources(This will slightly increase cpu over gpu)": "任意のメディアソースの下でハードウェアのデコードを無効にする（これはGPU負荷よりCPU負荷をわずかに増加させます）"
 }
