--- a/app/i18n/ja-JP/widgets.json
+++ b/app/i18n/ja-JP/widgets.json
@@ -1,25 +1,25 @@
 {
-  "Add Widgets": "ウィジェットを追加します。",
-  "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.": "ストリームに有効にするStreamlabsウィジェットを選択します。 これらは自動的にシーンに追加されます。",
-  "Thanks viewers with notification popups": "視聴者にありがとうの通知をポップアップさせる。",
+  "Add Widgets": "ウィジェットを追加",
+  "Select the Streamlabs widgets you would like to activate for your stream. These will get automatically added to your scene.": "ストリームに有効にするStreamlabsウィジェットを選択します。これらは自動的にシーンに追加されます。",
+  "Thanks viewers with notification popups": "通知ポップアップで視聴者に感謝を送る",
   "Most recent events into your stream": "あなたのストリームへの最近のイベント",
   "A jar that catches bits, tips, and more": "ビッツやチップ、他の物を集めるジャー",
   "Your channel's chat in your stream": "ストリーム内のチャンネルのチャット",
-  "Show off most recent donations to viewers": "最新の寄付を視聴者に見せる",
-  "Give your viewers a donation target to help you reach": "視聴者に手助けをするための寄付ターゲットを提供する",
-  "Give your viewers a follower target to help you reach": "視聴者にあなたの手助けをするフォロワーのターゲットを与える",
-  "Give your viewers a bit target to help you reach": "視聴者に手助けをするためのビッツ・ターゲットを提供する",
-  "Give your viewers a subscriber target to help you reach": "視聴者にあなたの手助けをするサブスクライバーのターゲットを与える",
-  "Show off how many viewers you have from multiple platforms": "複数のプラットフォームからの視聴者数を表示する",
+  "Show off most recent donations to viewers": "最新の寄付を視聴者に表示",
+  "Give your viewers a donation target to help you reach": "視聴者に手助けをするための寄付の目標を定める",
+  "Give your viewers a follower target to help you reach": "視聴者にあなたの手助けをするフォロワーの目標を定める",
+  "Give your viewers a bit target to help you reach": "視聴者に手助けをするためのビッツ目標を定める",
+  "Give your viewers a subscriber target to help you reach": "視聴者にあなたの手助けをするサブスクライバーの目標を定める",
+  "Show off how many viewers you have from multiple platforms": "複数のプラットフォームからの視聴者数を表示",
   "Give your viewers an opportunity of becoming a boss": "あなたの視聴者にボスになる機会を与える",
-  "Rolling credits at the end of your stream": "ストリームの終わりにクレジットをロールする",
-  "Add %{widgetscount} Widgets": "%{widgetscount} のウィジェットを追加します。",
-  "Rather do this manually?": "手動で行いますか？",
-  "Setup later": "後でセットアップをする",
-  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "ウィジェットのテーマがインストールされ、有効化されました。 ウィジェットプロファイルを管理するには、ここをクリックしてください。",
+  "Rolling credits at the end of your stream": "ストリームの終わりにクレジットをロール表示",
+  "Add %{widgetscount} Widgets": "%{widgetscount} のウィジェットを追加",
+  "Rather do this manually?": "または手動で行いますか？",
+  "Setup later": "後でセットアップ",
+  "Widget Theme installed & activated. Click here to manage your Widget Profiles.": "ウィジェットのテーマがインストールされ有効化されました。ウィジェットプロファイルを管理するには、ここをクリック",
   "Follow": "フォロー",
   "Subscription": "サブスクリプション",
-  "Donation": "寄付金",
+  "Donation": "寄付",
   "Bits": "ビット",
   "Host": "ホスト"
 }
